[tool.poetry]
name = "game"
version = "0.1.0"
description = "A Streamlit app for simulating the Marketverse game"
authors = ["viksit <viksit@gmail.com>"]
readme = "README.md"
packages = [{include = "game"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
numpy = "^2.2.1"

[tool.poetry.scripts]
game = "marketverse_app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


